logs/dag_id=api_dag/run_id=manual__2023-04-09T00:28:13.687031+00:00/task_id=create_table/attempt=1.log
[2023-04-09T00:28:14.872+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: api_dag.create_table manual__2023-04-09T00:28:13.687031+00:00 [queued]>
[2023-04-09T00:28:14.881+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: api_dag.create_table manual__2023-04-09T00:28:13.687031+00:00 [queued]>
[2023-04-09T00:28:14.882+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-04-09T00:28:14.883+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 2
[2023-04-09T00:28:14.887+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-04-09T00:28:14.896+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_table> on 2023-04-09 00:28:13.687031+00:00
[2023-04-09T00:28:14.904+0000] {standard_task_runner.py:55} INFO - Started process 9407 to run task
[2023-04-09T00:28:14.909+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'api_dag', 'create_table', 'manual__2023-04-09T00:28:13.687031+00:00', '--job-id', '48', '--raw', '--subdir', 'DAGS_FOLDER/api.py', '--cfg-path', '/tmp/tmpz6fwqr7g']
[2023-04-09T00:28:14.912+0000] {standard_task_runner.py:83} INFO - Job 48: Subtask create_table
[2023-04-09T00:28:15.009+0000] {task_command.py:376} INFO - Running <TaskInstance: api_dag.create_table manual__2023-04-09T00:28:13.687031+00:00 [running]> on host c12a518d534c
[2023-04-09T00:28:15.077+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=api_dag
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-04-09T00:28:13.687031+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-09T00:28:13.687031+00:00
[2023-04-09T00:28:15.088+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-04-09T00:28:15.095+0000] {sql.py:315} INFO - Running statement: CREATE TABLE IF NOT EXISTS user_details (
    firstname VARCHAR NOT NULL,
    lastname VARCHAR NOT NULL,);, parameters: None
[2023-04-09T00:28:15.098+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 3:     lastname VARCHAR NOT NULL,);
                                      ^

[2023-04-09T00:28:15.109+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=api_dag, task_id=create_table, execution_date=20230409T002813, start_date=20230409T002814, end_date=20230409T002815
[2023-04-09T00:28:15.120+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 48 for task create_table (syntax error at or near ")"
LINE 3:     lastname VARCHAR NOT NULL,);
                                      ^
; 9407)
[2023-04-09T00:28:15.161+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-04-09T00:28:15.191+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
